Removed all support for .NET 3.0 and .NET 3.5/Client. Fixed build errors in the Toolkits. Added Controllers to the .NET 4.5 Toolkit.

--- a/Designer/Interface/Project/GenerationTarget.xaml
+++ b/Designer/Interface/Project/GenerationTarget.xaml
@@ -45,9 +45,9 @@
 				<ComboBoxItem Content=".NET Framework 4.5" />
 				<ComboBoxItem Content=".NET Framework 4.0" />
 				<ComboBoxItem Content=".NET Framework 4.0 Client Profile" />
-				<ComboBoxItem Content=".NET Framework 3.5" />
+				<!--<ComboBoxItem Content=".NET Framework 3.5" />
 				<ComboBoxItem Content=".NET Framework 3.5 Client Profile" />
-				<ComboBoxItem Content=".NET Framework 3.0" />
+				<ComboBoxItem Content=".NET Framework 3.0" />-->
 			</ComboBox>
 			<CheckBox Content="Generate Referenced Types" Grid.Row="2" Margin="5" IsChecked="{Binding Path=Path.GenerateReferences}" />
 		</Grid>
