--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -31,7 +31,59 @@
 							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
 							<StackPanel Orientation="Vertical" Margin="3">
 								<StackPanel Orientation="Horizontal">
-									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Operation.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/Method.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+								</StackPanel>
+								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
+									<TextBlock.Text>
+										<MultiBinding StringFormat="Server: {0} {1}">
+											<Binding Path="ReturnType.TypeName" />
+											<Binding Path="ServerName" />
+										</MultiBinding>
+									</TextBlock.Text>
+								</TextBlock>
+								<TextBlock Visibility="{Binding Path=HasClientType, Converter={StaticResource BoolVisibilityConverter}}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
+									<TextBlock.Text>
+										<MultiBinding StringFormat="Client: {0} {1}">
+											<Binding Path="ReturnType.TypeName" />
+											<Binding Path="ClientName" />
+										</MultiBinding>
+									</TextBlock.Text>
+								</TextBlock>
+							</StackPanel>
+							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
+								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+							</Button>
+						</Grid>
+						<DataTemplate.Triggers>
+							<MultiDataTrigger>
+								<MultiDataTrigger.Conditions>
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" />
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="False" />
+								</MultiDataTrigger.Conditions>
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+							</MultiDataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
+								<Setter TargetName="DeleteOperation" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+							</DataTrigger>
+						</DataTemplate.Triggers>
+					</DataTemplate>
+					<DataTemplate x:Key="{x:Type Projects:DataChangeMethod}" DataType="{x:Type Projects:DataChangeMethod}">
+						<Grid Name="ItemGrid" >
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto" />
+							</Grid.RowDefinitions>
+							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+							<StackPanel Orientation="Vertical" Margin="3">
+								<StackPanel Orientation="Horizontal">
+									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/DataChangeMethod.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
 									<TextBlock Text="{Binding Path=ServerName}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
 								</StackPanel>
 								<TextBlock Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="10pt" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Margin="20,0,0,0" >
@@ -165,17 +217,26 @@
 		<TabItem Header="SERVICE" FontSize="12pt" Padding="10,5">
 			<TabControl>
 				<TabItem Header="Operations" FontSize="12pt" Padding="10,5" IsSelected="True">
-					<Grid>
+					<Grid Margin="0,5,5,0">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="1.5*" />
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
 						<Grid.RowDefinitions>
 							<RowDefinition Height="Auto" />
 							<RowDefinition Height="*" />
 						</Grid.RowDefinitions>
-						<Label Grid.Row="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Operation:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
-						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Margin="105,5,0,5" HorizontalAlignment="Left" Width="325" ValidationChanged="AddServiceMemberType_ValidationChanged" />
-						<pc:TextBox x:Name="AddServiceMemberName" LabelText="Name" Grid.Row="0" Margin="440,5,205,5" Validate="AddServiceMemberName_Validate" TextChanged="AddServiceMemberName_TextChanged" KeyUp="AddServiceMemberName_KeyUp" />
-						<Button x:Name="AddServiceMethod" Grid.Row="0" Margin="0,5,105,5" Content="Method" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddServiceMethod_Click" />
-						<Button x:Name="AddServiceProperty" Grid.Row="0" Margin="5" Content="Property" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddServiceProperty_Click" />
-						<Grid Grid.Row="1" Margin="0,5,0,0">
+						<Label Grid.Row="0" Grid.Column="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Operation:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
+						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Grid.Column="1" Margin="5" ValidationChanged="AddServiceMemberType_ValidationChanged" />
+						<pc:TextBox x:Name="AddServiceMemberName" LabelText="Name" Grid.Row="0" Grid.Column="2" Margin="5" Validate="AddServiceMemberName_Validate" TextChanged="AddServiceMemberName_TextChanged" KeyUp="AddServiceMemberName_KeyUp" />
+						<Button x:Name="AddServiceMethod" Grid.Row="0" Grid.Column="3" Margin="5" Content="Method" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceMethod_Click" />
+						<Button x:Name="AddServiceDCMethod" Grid.Row="0" Grid.Column="4" Margin="5" Content="Data Change Method" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceDCMethod_Click" />
+						<Button x:Name="AddServiceProperty" Grid.Row="0" Grid.Column="5" Margin="5" Content="Property" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceProperty_Click" />
+						<Grid Grid.Row="1" Margin="0,5,0,0" Grid.ColumnSpan="6">
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="230" />
 								<ColumnDefinition Width="*" />
