--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -39,9 +39,9 @@
 				<ColumnDefinition Width="*" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
-			<ToggleButton Content="Data Change Messaging Enabled" IsChecked="{Binding Path=OpenType.AutoDataEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
-			<Label Content="Data Change Batch Size:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
-			<c1:C1NumericBox Value="{Binding Path=OpenType.AutoDataBatchCount}" Format="G10" Margin="155,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" />
+			<ToggleButton Content="Enable Local Data Synchronization" IsChecked="{Binding Path=OpenType.AutoDataEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
+			<Label Content="Change Message Batch Interval:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
+			<c1:C1NumericBox Value="{Binding Path=OpenType.AutoDataBatchCount}" Format="G10" Margin="202,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" ToolTip="Specify the number of changes to the this object before a change message is sent." />
 		</Grid>
 		<Grid Name="OptionsGrid" Grid.Row="4" Margin="0,5,0,0" >
 			<Grid.ColumnDefinitions>
@@ -53,7 +53,7 @@
 			<Grid.RowDefinitions>
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
-			<ToggleButton Grid.Column="0" Grid.Row="1" Content="Use Protocol Buffers" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Determines if the type is marked as a protocol buffer contract." />
+			<ToggleButton Grid.Column="0" Grid.Row="1" Content="Use Protocol Buffers" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Determines if the type is marked as a protocol buffer contract." />
 			<ToggleButton Grid.Column="1" Grid.Row="1" Content="Skip Constructor" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoSkipConstructor}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Supress the constuctor during deserialization." />
 			<ToggleButton Grid.Column="2" Grid.Row="1" Content="Use Protocol Members Only" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoMembersOnly}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="If the contract is marked with multiple attributes, use only members explicitly marked for protocol buffers." />
 			<ToggleButton Grid.Column="3" Grid.Row="1" Content="Ignore List Handling" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=OpenType.ProtoIgnoreListHandling}" IsEnabled="{Binding Path=OpenType.EnableProtocolBuffers}" ToolTip="Use instance rules, list interfaces are ignored." />
