--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -39,9 +39,9 @@
 				<ColumnDefinition Width="*" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
-			<ToggleButton Content="Enable Local Data Synchronization" IsChecked="{Binding Path=OpenType.AutoDataEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
+			<ToggleButton Content="Enable Concurrently Mutable Data" IsChecked="{Binding Path=OpenType.DCMEnabled}" Margin="5" Grid.Column="0" Grid.Row="0" />
 			<Label Content="Change Message Batch Interval:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
-			<c1:C1NumericBox Value="{Binding Path=OpenType.AutoDataBatchCount}" Format="G10" Margin="202,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" ToolTip="Specify the number of changes to the this object before a change message is sent." />
+			<c1:C1NumericBox Value="{Binding Path=OpenType.DCMBatchCount}" Format="G10" Margin="202,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="UpdateBatchSize" ValueChanged="UpdateBatchSize_ValueChanged" Grid.Column="1" FontSize="10pt" ToolTip="Specify the number of changes to the this object before a change message is sent." />
 		</Grid>
 		<Grid Name="OptionsGrid" Grid.Row="4" Margin="0,5,0,0" >
 			<Grid.ColumnDefinitions>
