--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -17,7 +17,7 @@
 					<Data:ElementOrderConverter x:Key="ElementOrderConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 					<pc:NullBoolValueConverter x:Key="NullBoolValueConverter" />
-					<Data:AutoDataUpdateModeConverter x:Key="AutoDataUpdateModeConverter" />
+					<Data:DCMUpdateModeConverter x:Key="DCMUpdateModeConverter" />
 				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
@@ -96,7 +96,7 @@
 		<ToggleButton Grid.Column="4" Grid.Row="1" Content="Emit Default Value" Margin="5,5,0,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EmitDefaultValue}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="EmitDefaultValue" ToolTip="Force WCF emit the default value for the type if no value is provided." />
 		<ToggleButton Grid.Column="0" Grid.Row="2" Content="WinForms Binding" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateWinFormsSupport" ToolTip="Generates support for WinForms databinding." />
 		<ToggleButton Grid.Column="1" Grid.Row="2" Content="Attached XAML" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsAttached}" IsEnabled="{Binding Path=Element.HasXAMLType}" Name="IsAttached" ToolTip="Tells NETPath to generate an Attached WPF Binding for this member." />
-		<ToggleButton Grid.Column="2" Grid.Row="2" Content="Data Changes" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.AutoDataEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
+		<ToggleButton Grid.Column="2" Grid.Row="2" Content="Data Changes" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.DCMEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
 		<ToggleButton Grid.Column="3" Grid.Row="2" Content="Protocol Buffers" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.ProtocolBufferEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="ProtocolBuffers" ToolTip="The member is included in Protocol Buffer serialization." />
 		<pc:TextBox Grid.Column="4" Grid.Row="2" Margin="5,5,0,5" Name="Order" LabelText="Order" Text="{Binding Path=Element.Order, Converter={StaticResource ElementOrderConverter}}" Validate="Order_Validate" />
 	</Grid>
@@ -116,7 +116,7 @@
 		<pc:TextBox Name="AttachedTargetTypes" Grid.Row="1" Grid.Column="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedTargetTypes}" ToolTip="Please enter the Target Types as a common seperated list." />
 		<pc:TextBox Name="AttachedAttributeTypes" Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedAttributeTypes}" ToolTip="Please enter the Attribute Types as a common seperated list." />
 	</Grid>
-	<Grid Name="AutoDataGrid" Grid.Row="6" Margin="0,5,0,0" Visibility="{Binding Path=Element.AutoDataEnabled, Converter={StaticResource BoolVisibilityConverter}}" >
+	<Grid Name="DCMGrid" Grid.Row="6" Margin="0,5,0,0" Visibility="{Binding Path=Element.DCMEnabled, Converter={StaticResource BoolVisibilityConverter}}" >
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
@@ -126,9 +126,9 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Data Change Messaging" FontSize="12pt" />
-		<ToggleButton Grid.Row="1" Grid.Column="0" Content="Update ID" VerticalContentAlignment="Center" Margin="5" Padding="2,0" IsChecked="{Binding Path=Element.IsAutoDataID}" IsEnabled="{Binding Path=Element.IsValidAutoDataID}" ToolTip="Determines if the attribute can be browsed." />
+		<ToggleButton Grid.Row="1" Grid.Column="0" Content="Update ID" VerticalContentAlignment="Center" Margin="5" Padding="2,0" IsChecked="{Binding Path=Element.IsDCMID}" IsEnabled="{Binding Path=Element.IsValidDCMID}" ToolTip="Determines if the attribute can be browsed." />
 		<Label Content="Update Mode:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="1" />
-		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" SelectedIndex="{Binding Path=Element.AutoDataUpdateMode, Converter={StaticResource AutoDataUpdateModeConverter}}" Grid.Column="1" Grid.Row="1" >
+		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" SelectedIndex="{Binding Path=Element.DCMUpdateMode, Converter={StaticResource DCMUpdateModeConverter}}" Grid.Column="1" Grid.Row="1" >
 			<ComboBoxItem Content="Immediate" />
 			<ComboBoxItem Content="Batch" />
 		</ComboBox>
@@ -146,7 +146,7 @@
 		</Grid.RowDefinitions>
 		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Protocol Buffers" FontSize="12pt" />
 		<Label Content="Data Format:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="0" />
-		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" Height="23" SelectedIndex="{Binding Path=Element.AutoDataUpdateMode, Converter={StaticResource AutoDataUpdateModeConverter}}" Grid.Column="0" Grid.Row="1" >
+		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" Height="23" SelectedIndex="{Binding Path=Element.DCMUpdateMode, Converter={StaticResource DCMUpdateModeConverter}}" Grid.Column="0" Grid.Row="1" >
 			<ComboBoxItem Content="Default" IsSelected="True" />
 			<ComboBoxItem Content="FixedSize" />
 			<ComboBoxItem Content="Group" />
