--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -96,7 +96,7 @@
 		<ToggleButton Grid.Column="4" Grid.Row="1" Content="Emit Default Value" Margin="5,5,0,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.EmitDefaultValue}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="EmitDefaultValue" ToolTip="Force WCF emit the default value for the type if no value is provided." />
 		<ToggleButton Grid.Column="0" Grid.Row="2" Content="WinForms Binding" Margin="0,5,5,5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.GenerateWinFormsSupport}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="GenerateWinFormsSupport" ToolTip="Generates support for WinForms databinding." />
 		<ToggleButton Grid.Column="1" Grid.Row="2" Content="Attached XAML" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.IsAttached}" IsEnabled="{Binding Path=Element.HasXAMLType}" Name="IsAttached" ToolTip="Tells NETPath to generate an Attached WPF Binding for this member." />
-		<ToggleButton Grid.Column="2" Grid.Row="2" Content="Data Changes" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.DCMEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
+		<ToggleButton Grid.Column="2" Grid.Row="2" Content="Data Revisions" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.DCMEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="AutomaticUpdates" ToolTip="The member is included in Automatic Data Updates." />
 		<ToggleButton Grid.Column="3" Grid.Row="2" Content="Protocol Buffers" Margin="5" Padding="2,0" Height="23" IsChecked="{Binding Path=Element.ProtocolBufferEnabled}" IsEnabled="{Binding Path=Element.IsDataMember}" Name="ProtocolBuffers" ToolTip="The member is included in Protocol Buffer serialization." />
 		<pc:TextBox Grid.Column="4" Grid.Row="2" Margin="5,5,0,5" Name="Order" LabelText="Order" Text="{Binding Path=Element.Order, Converter={StaticResource ElementOrderConverter}}" Validate="Order_Validate" />
 	</Grid>
@@ -125,7 +125,7 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Data Change Messaging" FontSize="12pt" />
+		<Label Grid.ColumnSpan="2" Grid.Row="0" Content="Data Revision Exchange" FontSize="12pt" />
 		<ToggleButton Grid.Row="1" Grid.Column="0" Content="Update ID" VerticalContentAlignment="Center" Margin="5" Padding="2,0" IsChecked="{Binding Path=Element.IsDCMID}" IsEnabled="{Binding Path=Element.IsValidDCMID}" ToolTip="Determines if the attribute can be browsed." />
 		<Label Content="Update Mode:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Row="1" Grid.Column="1" />
 		<ComboBox Margin="95,5,5,5" VerticalContentAlignment="Center" SelectedIndex="{Binding Path=Element.DCMUpdateMode, Converter={StaticResource DCMUpdateModeConverter}}" Grid.Column="1" Grid.Row="1" >
