--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -234,7 +234,7 @@
 						<Data:TypeSelector Project="{Binding ServiceProject}" AllowVoid="True" x:Name="AddServiceMemberType" LabelText="Type" Grid.Row="0" Grid.Column="1" Margin="5" ValidationChanged="AddServiceMemberType_ValidationChanged" />
 						<pc:TextBox x:Name="AddServiceMemberName" LabelText="Name" Grid.Row="0" Grid.Column="2" Margin="5" Validate="AddServiceMemberName_Validate" TextChanged="AddServiceMemberName_TextChanged" KeyUp="AddServiceMemberName_KeyUp" />
 						<Button x:Name="AddServiceMethod" Grid.Row="0" Grid.Column="3" Margin="5" Content="Method" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceMethod_Click" />
-						<Button x:Name="AddServiceDCMethod" Grid.Row="0" Grid.Column="4" Margin="5" Content="Data Change Method" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceDCMethod_Click" />
+						<Button x:Name="AddServiceDCMethod" Grid.Row="0" Grid.Column="4" Margin="5" Content="Data Revision Method" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceDCMethod_Click" />
 						<Button x:Name="AddServiceProperty" Grid.Row="0" Grid.Column="5" Margin="5" Content="Property" HorizontalAlignment="Right" IsEnabled="False" Click="AddServiceProperty_Click" />
 						<Grid Grid.Row="1" Margin="0,5,0,0" Grid.ColumnSpan="6">
 							<Grid.ColumnDefinitions>
