--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -8,7 +8,9 @@
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-	d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
+	xmlns:c1="clr-namespace:C1.WPF;assembly=C1.WPF.4"
+	  xmlns:c1datetime="clr-namespace:C1.WPF.DateTimeEditors;assembly=C1.WPF.DateTimeEditors.4"
+	  d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
 	<Grid.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -17,6 +19,10 @@
 					<Service:ProtectionLevelConverter x:Key="ProtectionLevelConverter" />
 					<Service:SessionModeConverter x:Key="SessionModeConverter" />
 					<Service:ServiceAsynchronyModeConverter x:Key="ServiceAsynchronyModeConverter" />
+					<Service:AddressFilterModeConverter x:Key="AddressFilterModeConverter" />
+					<Service:ConcurrencyModeConverter x:Key="ConcurrencyModeConverter" />
+					<Service:InstanceContextModeConverter x:Key="InstanceContextModeConverter" />
+					<Service:IsolationLevelConverter x:Key="IsolationLevelConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 
 					<DataTemplate x:Key="{x:Type Projects:Method}" DataType="{x:Type Projects:Method}">
@@ -246,6 +252,63 @@
 						</Grid>
 					</Grid>
 				</TabItem>
+				<TabItem Header="Behavior" FontSize="12pt" Padding="10,5">
+					<Grid Grid.Row="3">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
+						<Label Content="Address Filter Mode:" VerticalAlignment="Center" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.SBAddressFilterMode, Converter={StaticResource AddressFilterModeConverter}}" Grid.Column="0" >
+							<ComboBoxItem Content="Exact" />
+							<ComboBoxItem Content="Prefix" />
+							<ComboBoxItem Content="Any" />
+						</ComboBox>
+						<Label Content="Instance Context Mode:" VerticalAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.SBInstanceContextMode, Converter={StaticResource InstanceContextModeConverter}}" Grid.Column="1" >
+							<ComboBoxItem Content="Single" />
+							<ComboBoxItem Content="Per Call" />
+							<ComboBoxItem Content="Per Session" />
+						</ComboBox>
+						<Label Content="Concurrency Mode:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.SBConcurrencyMode, Converter={StaticResource ConcurrencyModeConverter}}" Grid.Row="1" Grid.Column="0" >
+							<ComboBoxItem Content="Single" />
+							<ComboBoxItem Content="Reentrant" />
+							<ComboBoxItem Content="Multiple" />
+						</ComboBox>
+						<Label Content="Transaction Isolation Level:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.SBTransactionIsolationLevel, Converter={StaticResource IsolationLevelConverter}}" Grid.Row="1" Grid.Column="1" >
+							<ComboBoxItem Content="Serializable" />
+							<ComboBoxItem Content="RepeatableRead" />
+							<ComboBoxItem Content="ReadCommitted" />
+							<ComboBoxItem Content="ReadUncommitted" />
+							<ComboBoxItem Content="Snapshot" />
+							<ComboBoxItem Content="Chaos" />
+							<ComboBoxItem Content="Unspecified" />
+						</ComboBox>
+						<Label Content="Max Items In Object Graph:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<c1:C1NumericBox Value="{Binding Path=ServiceType.SBMaxItemsInObjectGraph}" Format="G10" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="SBMaxItemsInObjectGraph" ValueChanged="SBMaxItemsInObjectGraph_ValueChanged" Grid.Row="2" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
+						<Label Content="Transaction Timeout:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<c1datetime:C1TimeEditor Value="{Binding Path=ServiceType.SBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="TimeSpan" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" FontSize="10pt" />
+						<ToggleButton Content="Automatic Session Shutdown" IsChecked="{Binding Path=ServiceType.SBAutomaticSessionShutdown}" Margin="5" Grid.Column="0" Grid.Row="3" />
+						<ToggleButton Content="Ensure Ordered Dispatch" IsChecked="{Binding Path=ServiceType.SBEnsureOrderedDispatch}" Margin="5" Grid.Column="1" Grid.Row="3" />
+						<ToggleButton Content="Ignore Extension Data Object" IsChecked="{Binding Path=ServiceType.SBIgnoreExtensionDataObject}" Margin="5" Grid.Column="0" Grid.Row="4" />
+						<ToggleButton Content="Include Exception Detail In Faults" IsChecked="{Binding Path=ServiceType.SBIncludeExceptionDetailInFaults}" Margin="5" Grid.Column="1" Grid.Row="4" />
+						<ToggleButton Content="Release Service Instance On Transaction Complete" IsChecked="{Binding Path=ServiceType.SBReleaseServiceInstanceOnTransactionComplete}" Margin="5" Grid.Column="0" Grid.Row="5" />
+						<ToggleButton Content="Transaction Auto Complete On Session Close" IsChecked="{Binding Path=ServiceType.SBTransactionAutoCompleteOnSessionClose}" Margin="5" Grid.Column="1" Grid.Row="5" />
+						<ToggleButton Content="Use Synchronization Context" IsChecked="{Binding Path=ServiceType.SBUseSynchronizationContext}" Margin="5" Grid.Column="0" Grid.Row="6" />
+						<ToggleButton Content="Validate Must Understand" IsChecked="{Binding Path=ServiceType.SBValidateMustUnderstand}" Margin="5" Grid.Column="1" Grid.Row="6" />
+					</Grid>
+				</TabItem>
 				<TabItem Header="Documentation" FontSize="12pt" Padding="10,5">
 					<Docs:Class Margin="5" Documentation="{Binding Path=ServiceType.ServiceDocumentation}" />
 				</TabItem>
@@ -272,6 +335,46 @@
 							<ListBox x:Name="CallbackOperationsList" Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Path=ServiceType.CallbackOperations}" AllowDrop="True" BorderThickness="0" Background="Transparent" Margin="0" SelectionMode="Single" Padding="-1,0" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" VirtualizingStackPanel.IsVirtualizing="False" SelectionChanged="CallbackOperationsList_SelectionChanged"  PreviewMouseLeftButtonDown="CallbackOperationsList_PreviewMouseLeftButtonDown" PreviewMouseMove="CallbackOperationsList_PreviewMouseMove" QueryContinueDrag="CallbackOperationsList_QueryContinueDrag" DragLeave="CallbackOperationsList_DragLeave" PreviewDragOver="CallbackOperationsList_PreviewDragOver" PreviewDrop="CallbackOperationsList_Drop" />
 							<ContentPresenter Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Content="{Binding Path=ActiveCallback}" />
 						</Grid>
+					</Grid>
+				</TabItem>
+				<TabItem Header="Behavior" FontSize="12pt" Padding="10,5">
+					<Grid Grid.Row="3">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="*" />
+						</Grid.ColumnDefinitions>
+						<Grid.RowDefinitions>
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+							<RowDefinition Height="Auto" />
+						</Grid.RowDefinitions>
+						<Label Content="Concurrency Mode:" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.CBConcurrencyMode, Converter={StaticResource ConcurrencyModeConverter}}" Grid.Row="0" Grid.Column="0" >
+							<ComboBoxItem Content="Single" />
+							<ComboBoxItem Content="Reentrant" />
+							<ComboBoxItem Content="Multiple" />
+						</ComboBox>
+						<Label Content="Transaction Isolation Level:" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<ComboBox Height="23" Margin="175,5,5,5" SelectedIndex="{Binding Path=ServiceType.CBTransactionIsolationLevel, Converter={StaticResource IsolationLevelConverter}}" Grid.Row="0" Grid.Column="1" >
+							<ComboBoxItem Content="Serializable" />
+							<ComboBoxItem Content="RepeatableRead" />
+							<ComboBoxItem Content="ReadCommitted" />
+							<ComboBoxItem Content="ReadUncommitted" />
+							<ComboBoxItem Content="Snapshot" />
+							<ComboBoxItem Content="Chaos" />
+							<ComboBoxItem Content="Unspecified" />
+						</ComboBox>
+						<Label Content="Max Items In Object Graph:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<c1:C1NumericBox Value="{Binding Path=ServiceType.CBMaxItemsInObjectGraph}" Format="G10" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="CBMaxItemsInObjectGraph" ValueChanged="CBMaxItemsInObjectGraph_ValueChanged" Grid.Row="1" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
+						<Label Content="Transaction Timeout:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+						<c1datetime:C1TimeEditor Value="{Binding Path=ServiceType.CBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="TimeSpan" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
+						<ToggleButton Content="Automatic Session Shutdown" IsChecked="{Binding Path=ServiceType.CBAutomaticSessionShutdown}" Margin="5" Grid.Column="0" Grid.Row="2" />
+						<ToggleButton Content="Include Exception Detail In Faults" IsChecked="{Binding Path=ServiceType.CBIncludeExceptionDetailInFaults}" Margin="5" Grid.Column="1" Grid.Row="2" />
+						<ToggleButton Content="Ignore Extension Data Object" IsChecked="{Binding Path=ServiceType.CBIgnoreExtensionDataObject}" Margin="5" Grid.Column="0" Grid.Row="3" />
+						<ToggleButton Content="Validate Must Understand" IsChecked="{Binding Path=ServiceType.CBValidateMustUnderstand}" Margin="5" Grid.Column="1" Grid.Row="3" />
+						<ToggleButton Content="Use Synchronization Context" IsChecked="{Binding Path=ServiceType.CBUseSynchronizationContext}" Margin="5" Grid.Column="0" Grid.Row="4" />
 					</Grid>
 				</TabItem>
 				<TabItem Header="Documentation" FontSize="12pt" Padding="10,5">
