--- a/Designer/Interface/Service/DataChangeMethod.xaml
+++ b/Designer/Interface/Service/DataChangeMethod.xaml
@@ -64,7 +64,10 @@
 		<TabItem Header="Delete Function" FontSize="12pt" Padding="10,5" IsSelected="{Binding Path=DeleteFunctionSelected}" IsEnabled="{Binding Path=MethodData.GenerateNewDeleteFunction}" />
 	</TabControl>
 	<TabControl Grid.Row="7" Name="MethodDetails" >
-		<TabItem Header="Parameters" FontSize="12pt" Padding="10,5" IsSelected="True">
+		<TabItem Padding="10,5" IsSelected="True">
+			<TabItem.Header>
+				<TextBlock Text="Parameters" FontSize="12pt"/>
+			</TabItem.Header>
 			<Grid >
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
@@ -123,7 +126,10 @@
 				</ListBox>
 			</Grid>
 		</TabItem>
-		<TabItem Header="Documentation" FontSize="12pt" Padding="10,5">
+		<TabItem Padding="10,5">
+			<TabItem.Header>
+				<TextBlock Text="Members" FontSize="12pt"/>
+			</TabItem.Header>
 			<Docs:Standard Margin="5" IsMethod="True" Documentation="{Binding Path=MethodData.Documentation}" />
 		</TabItem>
 	</TabControl>
