--- a/Designer/Themes/C1TimeEditor.xaml
+++ b/Designer/Themes/C1TimeEditor.xaml
@@ -5,7 +5,7 @@
 			xmlns:c1="clr-namespace:C1.WPF;assembly=C1.WPF.4"
 			xmlns:c1datetime="clr-namespace:C1.WPF.DateTimeEditors;assembly=C1.WPF.DateTimeEditors.4" >
 	<ResourceDictionary.MergedDictionaries>
-		<ResourceDictionary Source="pack://application:,,,/Prospective.Controls;component/Themes/Defaults.xaml" />
+		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Colors.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 
