--- a/Designer/Interface/Data/TypeEditor.xaml
+++ b/Designer/Interface/Data/TypeEditor.xaml
@@ -9,7 +9,7 @@
 	<ContentControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				
+				<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 			<Data:ClassScopeConverter x:Key="ClassScopeConverter" />
 			<Data:ClassTypeConverter x:Key="ClassTypeConverter" />
@@ -70,7 +70,7 @@
 								<Grid.RowDefinitions>
 									<RowDefinition Height="22" />
 								</Grid.RowDefinitions>
-								<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+								<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
 								<Button Name="DeleteSelectedInheritedType" Grid.Column="1" Margin="0" Click="DeleteSelectedInheritedType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 								</Button>
@@ -121,7 +121,7 @@
 								<Grid.RowDefinitions>
 									<RowDefinition Height="22" />
 								</Grid.RowDefinitions>
-								<TextBlock Name="DataTypeName" Text="{Binding Path=TypeName}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+								<TextBlock Name="DataTypeName" Text="{Binding Path=TypeName}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
 								<Button Name="DeleteSelectedKnownType" Grid.Column="1" Grid.RowSpan="2" Margin="0" Click="DeleteSelectedKnownType_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 									<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 								</Button>
