--- a/Designer/Interface/Data/TypeSelector.xaml
+++ b/Designer/Interface/Data/TypeSelector.xaml
@@ -1,20 +1,20 @@
 ﻿<ContentControl x:Class="NETPath.Interface.Data.TypeSelector" x:ClassModifier="internal"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects" 
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
 	MinHeight="24" MinWidth="100"
-    mc:Ignorable="d" d:DesignHeight="24" d:DesignWidth="300"
+	mc:Ignorable="d" d:DesignHeight="24" d:DesignWidth="300"
 	UseLayoutRounding="True"
-	Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}"
+	Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}"
 	LostFocus="ContentControl_LostFocus" GotFocus="ContentControl_GotFocus">
 	<ContentControl.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="pack://application:,,,/Prospective.Controls;component/Themes/Generic.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 			<Data:DataTypeModeConverter x:Key="DataTypeModeConverter" />
 		</ResourceDictionary>
@@ -32,7 +32,7 @@
 							<Border Name="BG" Background="Transparent" BorderBrush="Transparent" BorderThickness="0" CornerRadius="0" Padding="2">
 								<StackPanel Orientation="Horizontal">
 									<Image Source="{Binding Converter={StaticResource DataTypeModeConverter}}" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-									<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+									<TextBlock Name="DataTypeName" Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0,0,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
 								</StackPanel>
 							</Border>
 							<DataTemplate.Triggers>
