--- a/Designer/Interface/Enum/Enum.xaml
+++ b/Designer/Interface/Enum/Enum.xaml
@@ -39,7 +39,10 @@
 	<Data:TypeEditor OpenType="{Binding Path=OpenType.ClientType}" x:Name="ClientTypeEditor" SupportInheritedTypes="False" SupportKnownTypes="False" IsEnumType="True" Grid.Row="1" Grid.ColumnSpan="3" Margin="100,0,0,0" />
 	<ToggleButton Content="Flags Enumeration" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="2" Height="23" IsChecked="{Binding Path=OpenType.IsFlags}" Margin="5" />
 	<TabControl Grid.Row="3" Grid.ColumnSpan="3" Margin="0,10,0,0" >
-		<TabItem Header="Values" FontSize="12pt" IsSelected="True">
+		<TabItem IsSelected="True">
+			<TabItem.Header>
+				<TextBlock Text="Values" FontSize="12pt"/>
+			</TabItem.Header>
 			<Grid>
 				<Grid.RowDefinitions>
 					<RowDefinition Height="Auto" />
@@ -127,7 +130,7 @@
 																<Grid.RowDefinitions>
 																	<RowDefinition Height="22" />
 																</Grid.RowDefinitions>
-																<TextBlock Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="{StaticResource DefaultFontSize}" />
+																<TextBlock Text="{Binding Path=Name}" Grid.Column="0" Margin="3,0" VerticalAlignment="Center" TextWrapping="NoWrap" TextTrimming="CharacterEllipsis" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" />
 																<Button Name="DeleteSelectedAggregateValue" Grid.Column="1" Margin="0" Click="DeleteSelectedAggregateValue_Click" Padding="0" Visibility="Hidden" Background="Transparent">
 																	<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 																</Button>
@@ -183,7 +186,10 @@
 				</ListBox>
 			</Grid>
 		</TabItem>
-		<TabItem Header="Documentation" FontSize="12pt" >
+		<TabItem>
+			<TabItem.Header>
+				<TextBlock Text="Documentation" FontSize="12pt"/>
+			</TabItem.Header>
 			<Docs:Class x:Name="Docs" Margin="5" Documentation="{Binding Path=OpenType.Documentation}" />
 		</TabItem>
 	</TabControl>
