--- a/Designer/Interface/Main.xaml
+++ b/Designer/Interface/Main.xaml
@@ -16,13 +16,14 @@
 		<pc:WindowChrome CaptionHeight="34" ResizeBorderThickness="4" CornerRadius="0" GlassFrameThickness="0" />
 	</pc:WindowChrome.WindowChrome>
 	<Window.Resources>
+	<ResourceDictionary>
 		<pc:UriToBitmapImageConverter x:Key="UriToBitmapImageConverter" />
 		<Style x:Key="{x:Type local:RecentProjectItem}" TargetType="{x:Type local:RecentProjectItem}">
 			<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}" />
 			<Setter Property="BorderBrush" Value="Transparent" />
 			<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}" />
 			<Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
-			<Setter Property="FontSize" Value="{DynamicResource DefaultFontSize}" />
+			<Setter Property="FontSize" Value="10pt" />
 			<Setter Property="FontWeight" Value="{StaticResource DefaultFontWeight}" />
 			<Setter Property="UseLayoutRounding" Value="true"/>
 			<Setter Property="MinHeight" Value="65"/>
@@ -99,6 +100,7 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+	</ResourceDictionary>
 	</Window.Resources>
 	<Border x:Name="WindowBorder" BorderThickness="0" BorderBrush="{StaticResource WindowBorderColor}" Background="{StaticResource WindowBackground}" Margin="8">
 		<Grid>
@@ -140,16 +142,16 @@
 				</ItemsControl>
 				<Label Grid.Column="2" Content="{Binding Path=Title}" FontSize="14pt" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
 				<Button x:Name="MinimizeWindow" Grid.Column="3" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MinimizeWindow_Click">
-					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowMinimize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
+					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowMinimize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 				<Button x:Name="MaximizeWindow" Grid.Column="4" Visibility="Collapsed" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="MaximizeWindow_Click">
-					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowMaximize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
+					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowMaximize.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 				<Button x:Name="RestoreWindow" Grid.Column="4" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="RestoreWindow_Click">
-					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowRestore.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
+					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowRestore.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 				<Button x:Name="CloseWindow" Grid.Column="5" Style="{StaticResource WindowControlButtonStyle}" pc:WindowChrome.IsHitTestVisibleInChrome="True" Click="CloseWindow_Click">
-					<Image Source="pack://application:,,,/Prospective.Controls;component/Resources/WindowClose.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
+					<Image Source="pack://application:,,,/NETPath;component/Icons/WindowClose.png" Width="12" Height="12" Stretch="None" HorizontalAlignment="Center" VerticalAlignment="Center" />
 				</Button>
 			</Grid>
 			<Border Grid.Row="1" BorderBrush="{StaticResource WindowBorderColor}" BorderThickness="0,1,0,0">
@@ -233,7 +235,10 @@
 							</Border>
 						</StackPanel>
 						<TabControl Grid.Column="1" Grid.Row="1" Grid.RowSpan="2" Margin="5,0,0,0">
-							<TabItem Header="GETTING STARTED" FontSize="12pt">
+							<TabItem>
+								<TabItem.Header>
+									<TextBlock Text="GETTING STARTED" FontSize="12pt"/>
+								</TabItem.Header>
 								<FlowDocumentScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" >
 									<FlowDocument FontFamily="Segoe UI" FontSize="12pt">
 										<Paragraph>
@@ -257,7 +262,10 @@
 									</FlowDocument>
 								</FlowDocumentScrollViewer>
 							</TabItem>
-							<TabItem Header="LATEST NEWS" FontSize="12pt">
+							<TabItem>
+								<TabItem.Header>
+									<TextBlock Text="LATEST NEWS" FontSize="12pt"/>
+								</TabItem.Header>
 								<TabItem.Resources>
 									<XmlDataProvider x:Key="Blog" Source="http://ps.prospectivesoftware.com/?feed=rss2"/>
 									<pc:XmlDateConverter x:Key="XmlDateConverter" />
