--- a/Designer/Interface/Navigator.xaml
+++ b/Designer/Interface/Navigator.xaml
@@ -5,8 +5,8 @@
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	xmlns:local="clr-namespace:NETPath.Interface"
 	DataContext="{Binding RelativeSource={RelativeSource Self}}"
-	mc:Ignorable="d" d:DesignHeight="950" d:DesignWidth="1280">
-    <Grid>
+	mc:Ignorable="d" d:DesignHeight="950" d:DesignWidth="1280" FontSize="10pt">
+	<Grid>
 		<Grid.Resources>
 			<ResourceDictionary>
 				<ResourceDictionary.MergedDictionaries>
