--- a/Designer/Themes/C1NumericBox.xaml
+++ b/Designer/Themes/C1NumericBox.xaml
@@ -4,7 +4,7 @@
 			xmlns:System="clr-namespace:System;assembly=mscorlib"
 			xmlns:c1="clr-namespace:C1.WPF;assembly=C1.WPF.4" >
 	<ResourceDictionary.MergedDictionaries>
-		<ResourceDictionary Source="pack://application:,,,/Prospective.Controls;component/Themes/Defaults.xaml" />
+		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Colors.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 
